Fix npm package - include dist directory for MCP server
The MCP server was failing because the dist directory wasn't included in the published package. Added files field to package.json to ensure all necessary files are included.

Fixes connection closed error when using:
npx -y @just-every/mcp-read-website-fast

--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "bin": {
     "mcp-read-website-fast": "bin/mcp-read-website.js"
   },
+  "files": [
+    "dist/**/*",
+    "bin/**/*",
+    "README.md",
+    "LICENSE",
+    "package.json"
+  ],
   "scripts": {
     "build": "tsc -p tsconfig.prod.json",
     "build:dev": "tsc",
